--- a/webapp/view/View1.view.xml
+++ b/webapp/view/View1.view.xml
@@ -1,7 +1,6 @@
 <mvc:View xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" xmlns:f="sap.ui.layout.form" xmlns:l="sap.ui.layout"
 	controllerName="art.bif.ur.controller.View1">
-	<Page showNavButton="true"
-          navButtonPress="onBack">
+	<Page>
 		<f:SimpleForm id="idSimpleForm" 
 			          editable="true" 
 			          layout="ResponsiveGridLayout" 
